Clean up more code